Enhancing FillHeap, adding deployment files